Added the React-Reveal Material Icons & babel necessary dependency

--- a/package.json
+++ b/package.json
@@ -6,21 +6,30 @@
   "scripts": {
     "start": "webpack-dev-server --open"
   },
-  "babel":{
-    "presets" : [
+  "babel": {
+    "presets": [
       "@babel/preset-env",
       "@babel/preset-react"
+    ],
+    "plugins": [
+      "@babel/plugin-proposal-class-properties"
     ]
   },
-  "keywords": ["quiz"],
+  "keywords": [
+    "quiz"
+  ],
   "author": "Jatin Varlyani",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-reveal": "^1.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
