--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A simple Quiz",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --open && node server.js",
-    "build": "webpack --mode production"
+    "start": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+    "build": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build"
   },
   "babel": {
     "presets": [
@@ -32,7 +32,8 @@
     "popper.js": "^1.15.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-reveal": "^1.2.2"
+    "react-reveal": "^1.2.2",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
@@ -46,5 +47,17 @@
     "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.3.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
